Wed Jul  7 16:56:08 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* misc/freetds_autobuild: update automatic test

Wed Jul  7 15:56:44 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* misc/sybase_tests src/ctlib/unittests/datafmt.c:
	- update script to build tests even for ctlib

Wed Jul  7 15:39:20 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* misc/check_symbols.txt: add missing symbols

Tue Jul  6 11:23:28 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/checkexport.sh vms/odbc_driver_axp.opt:
	* win32/FreeTDS.def:
	- update export symbols

Mon Jul  5 22:49:34 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc_util.c: improve conversion if wide enabled

Mon Jul  5 16:22:33 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c: fix for SQLTables and sybase

Mon Jul  5 16:22:06 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/blob1.c: support SQL_NO_TOTAL from SQLGetData

Mon Jul  5 11:19:56 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/array.c src/odbc/unittests/array_out.c:
	* src/odbc/unittests/attributes.c src/odbc/unittests/base.c:
	* src/odbc/unittests/binary_test.c src/odbc/unittests/blob1.c:
	* src/odbc/unittests/cancel.c src/odbc/unittests/common.c:
	* src/odbc/unittests/common.h src/odbc/unittests/compute.c:
	* src/odbc/unittests/connect.c src/odbc/unittests/connect2.c:
	* src/odbc/unittests/const_params.c:
	* src/odbc/unittests/convert_error.c src/odbc/unittests/copydesc.c:
	* src/odbc/unittests/cursor1.c src/odbc/unittests/cursor2.c:
	* src/odbc/unittests/cursor3.c src/odbc/unittests/cursor4.c:
	* src/odbc/unittests/cursor5.c src/odbc/unittests/cursor6.c:
	* src/odbc/unittests/cursor7.c src/odbc/unittests/data.c:
	* src/odbc/unittests/date.c src/odbc/unittests/descrec.c:
	* src/odbc/unittests/describecol.c src/odbc/unittests/earlybind.c:
	* src/odbc/unittests/error.c src/odbc/unittests/freeclose.c: